# IMU_orientation

./: .gitignore  CMakeLists.txt  ImrRecord.h  README.MD  main.cpp  parse_header.cpp  parse_header.h
